--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -18,6 +18,7 @@ env:
  # Credentials for deployment to AWS
  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+ AWS_DEFAULT_REGION: 'us-east-1'
  
 jobs:
  terraform:
@@ -92,5 +93,6 @@ jobs:
        run: terraform apply -auto-approve -input=false
 
      - name: Sync s3 site files
+       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
        run: |
          aws s3 sync ../site_files s3://challenge.kyleflood.com
